@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction



class Client {
  -String name
  -String email
  -int nif
  -String password
  -int credits
}




class Cart {
  -String id
  -int productQuantity
  -double finalPrice
  -double finalWeight
}

class Order {
  -String number
  -String date
  -boolean status
  }

class Invoice {
  -String number
  -String date
  -double finalPrice
  }

class Stock {
  -String productID
  -int quantity
}

class Product {
  -String id
  -String name
  -String description
  -double price
  -double weight
}

class Address {
  -double latitude
  -double longitude
  -String street
}

class CreditCard {
  -int number
  -int monthExpiration
  -int yearExpiration
  -int ccv
}


class Delivery {
  -String id
  -double necessaryEnergy
  -double distance
  -double weight
}


Client "1" -- "1" Address: Has >
Client "1" -- "1" CreditCard: Has >
Client "1" -- "1.." Invoice: Receives >
Client "1" -- "1.." Cart: Has >

Cart "1" -- "0.." Product: Has >
Cart "1" -- "1" Order: Generate >

Order "1" -- "1.." Product: Has >
Order "1" -- "1" Invoice: Generates >




Product "1" -- "1" Stock: Has >


Delivery "1" -- "1.." Order: Has >



@enduml